[package]
name = "room-environment-monitor-listener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.13.0"
diesel = { version = "2.2.4", features = ["postgres"] }
dotenv = "0.15.0"
envconfig = "0.11.0"
futures = "0.3.31"
paho-mqtt = "0.12"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
