[package]
name = "room-environment-monitor-listener"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
async-std = "1.13.0"
axum = "0.7.7"
diesel = { version = "2.2.4", features = ["postgres"] }
dotenv = "0.15.0"
envconfig = "0.11.0"
futures = "0.3.31"
paho-mqtt = "0.12"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "2.0.3"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[build-dependencies]
vergen = { version = "9.0.1", features = ["build", "cargo", "emit_and_set"] }
vergen-git2 = { version = "1.0.1", features = ["build"] }
anyhow = "1.0.93"
